--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,8 +6,8 @@ pages_build_output_dir = ".vercel/output/static"
 # 默认 D1 数据库配置（用于命令行操作）
 [[d1_databases]]
 binding = "DB"
-database_name = "katelyatv-db"
-database_id = "6d580637-1f87-4ddf-8b4d-3d97254b4c33"
+database_name = "d1"
+database_id = "22cb68ee-3caa-4d35-9507-d33d04a07f60"
 
 # 生产环境配置
 [env.production]
@@ -16,8 +16,8 @@ name = "katelyatv"
 # 生产环境 D1 数据库配置
 [[env.production.d1_databases]]
 binding = "DB"
-database_name = "katelyatv-db"
-database_id = "6d580637-1f87-4ddf-8b4d-3d97254b4c33"
+database_name = "d1"
+database_id = "22cb68ee-3caa-4d35-9507-d33d04a07f60"
 
 # 生产环境变量
 [env.production.vars]
@@ -25,8 +25,8 @@ NEXT_PUBLIC_STORAGE_TYPE = "d1"
 NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
 NEXTAUTH_URL = "https://tv.katelya.eu.org"
-USERNAME = "katelya"
-AUTH_PASSWORD = "ab1433223cd@"
+USERNAME = "hom"
+AUTH_PASSWORD = "ssss1234"
 IMAGE_PROXY_ENABLED = "true"
 CACHE_TTL = "3600"
 CORS_ORIGIN = "*"
@@ -45,8 +45,8 @@ name = "katelyatv-preview"
 # 预览环境 D1 数据库配置
 [[env.preview.d1_databases]]
 binding = "DB"
-database_name = "katelyatv-db"
-database_id = "6d580637-1f87-4ddf-8b4d-3d97254b4c33"
+database_name = "d1"
+database_id = "22cb68ee-3caa-4d35-9507-d33d04a07f60"
 
 # 预览环境变量
 [env.preview.vars]
@@ -54,8 +54,8 @@ NEXT_PUBLIC_STORAGE_TYPE = "d1"
 NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
 NEXTAUTH_URL = "https://katelyatv.pages.dev"
-USERNAME = "katelya"
-AUTH_PASSWORD = "ab1433223cd@"
+USERNAME = "hom"
+AUTH_PASSWORD = "ssss1234"
 IMAGE_PROXY_ENABLED = "true"
 CACHE_TTL = "3600"
 CORS_ORIGIN = "*"
