--- a/package.json
+++ b/package.json
@@ -76,10 +76,12 @@
     "postcss": "^8.5.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
-    "devDependencies": { "vercel": "39.1.1" }, 
-    "overrides": { "vercel": "$vercel" },
+    "vercel": "39.1.1", 
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
+  },
+  "overrides": { 
+  "vercel": "$vercel"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
